# synth-scaffold

./: .clangd  .gitignore  README.md  pyproject.toml
demos/mm_dse/: .gitignore  analyze.py  latency_results.csv  linalg.h  mm_dse.py  tile_dse.py
synth_scaffold/: __init__.py  synth_scaffold.py
tests/: .gitignore  test_tool.py
