[project]
name = "synth-scaffold"
version = "0.1.0"
description = "A tool to synthesis non-top-level functions for higher-level synthesis"
authors = [{ name = "Stefan Abi-Karam" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []


[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.4", "ruff>=0.9.4"]
demo = ["matplotlib>=3.10.1", "numpy>=2.2.3", "pandas>=2.2.3"]

[tool.setuptools]
packages = ["synth_scaffold"]
